PLFENG-3008: update POMs, add tomcat logs